--- a/style.css
+++ b/style.css
@@ -13,6 +13,23 @@
   box-sizing: border-box;
 }
 
+datalist {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  writing-mode: vertical-lr;
+  width: 200px;
+}
+
+option {
+  padding: 0;
+}
+
+input[type="range"] {
+  width: 200px;
+  margin: 0;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -38,6 +55,18 @@ video {
 /* Storing custom CSS properties */
 /* https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_cascading_variables/Using_CSS_custom_properties */
 
+:root {
+  --col01: rgb(79, 247, 244);
+  --col02: rgb(42, 42, 42);
+  --border: solid 0.1rem var(--col02);
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+    --col02: rgb(79, 247, 244);
+    --col01: rgb(42, 42, 42);
+  }
+}
+
 /* .:*~*:._.:*~*:._.:*~*:._.:*~*:._.:*~*:._.:*~*:._.:*~*:._.:*~*:._.:*~*:. .:*~*:._.:*~*:._.:*~*:._.:*~*:._.:*~*:._.:*~*:._.:*~*:._.:*~*:._.:*~*:.  */
 /* Intro Modal dialog */
 /* need to apply to open dialog, otherwise flex interferes with closing */
@@ -45,9 +74,9 @@ video {
 dialog[open] {
   margin: auto; /* place in centre */
   padding: 1rem;
-  /* background-color: var(--col01); */
-  /* color: var(--col02); */
-  /* border: var(--border); */
+  background-color: var(--col01);
+  color: var(--col02);
+  border: var(--border);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -65,4 +94,45 @@ dialog::backdrop {
   /* background-color: var(--col01); */
   /* color: var(--col02); */
   padding: 0 1rem;
+}
+.keyboardCont {
+  display: flex;
+  height: 10rem;
+}
+.octaveCont {
+  position: relative;
+  width: 15rem;
+}
+.whiteKeyCont {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: stretch;
+}
+.whiteKey {
+  flex: 1;
+  background-color: white;
+  background-image: linear-gradient(rgb(39, 208, 255), rgb(175, 255, 248));
+}
+.whiteKey:hover {
+  cursor: pointer;
+}
+.whiteKey:active {
+}
+.blackKeyCont {
+  position: absolute;
+  top: 0%;
+  display: flex;
+  height: 50%;
+  width: 100%;
+  align-items: stretch;
+}
+.blackKey {
+  flex: 1;
+  background-image: linear-gradient(rgb(243, 232, 255), rgb(242, 200, 255));
+}
+.ghostKey {
+  flex: 0.5;
+  opacity: 0;
+  pointer-events: none;
 }
