--- a/style.css
+++ b/style.css
@@ -1,7 +1,34 @@
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
+
 body {
   overflow-y: hidden;
   min-height: 100vh;
   background-image: linear-gradient(#4cd3c8, #005767);
+  margin: 0 auto;
+  text-align: center;
+  font-family: "League Spartan";
+}
+
+p {
+  color: black;
+  padding-top: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+button {
+  margin: 1rem;
+  padding: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  border-radius: 2rem;
+  background-color: rgb(200, 196, 196);
+  cursor: pointer;
+}
+
+#introDialog {
+  border-radius: 1rem;
+  background-color: aliceblue;
 }
 
 .pillar-container {
